test/assets/invalid/string-to-num/expect-float.hs
a :: Float -> Bool
a = const True

b :: Bool
b = a "-4.2"